@@ -127,7 +127,7 @@ The default configuration (the one hardcoded in the fim executable) is dumped on
 The \fBscriptfile\fP will be executed right after the default initialization file is executed.
 .TP
 .B \-f {fimrc}, \-\-etc\-fimrc {fimrc}
-Specify an alternative system wide initialization file (default: /etc/fimrc), which will be executed prior to any other configuration file.
+Specify an alternative system wide initialization file (default: /usr/local/etc/fimrc), which will be executed prior to any other configuration file.
 
 .TP
 .B \-F {commands}, \-\-final\-commands {commands}
@@ -157,7 +157,7 @@ Name of the video mode to use video mode (must be listed in /etc/fb.modes).  Def
 No personal initialization file will be read (default is ~/.fimrc) at startup.
 .TP
 .B  \-\-no\-etc\-rc\-file
-No system wide initialization file will be read (default is /etc/fimrc) at startup.
+No system wide initialization file will be read (default is /usr/local/etc/fimrc) at startup.
 .TP
 .B  \-\-no\-internal\-config
 No internal default configuration at startup (uses internal variable _no_default_configuration). Will only provide a minimal working configuration. 
@@ -500,12 +500,12 @@ file shipped in the documentation directory to discover the known ones.
 .SH  FILES
 
 .TP 15
-.B /usr/share/doc/fim
+.B /usr/local/share/doc/fim
 The directory with 
 .B Fim
 documentation files.
 .TP 15
-.B /etc/fimrc
+.B /usr/local/etc/fimrc
 The system wide
 .B Fim
 initialization file (executed at startup, after executing the hardcoded configuration).
